--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: black;
+  color: white;
   background-color: #f8f2e7;
 
   font-synthesis: none;
@@ -20,7 +20,7 @@
 
 
 body {
-  background-color: #f8f2e7;
+  background-color: black;
   margin: 0;
   display: flex;
   min-width: 320px;
