--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,7 +23,7 @@ body {
   background-color: black;
   margin: 0;
   display: flex;
-  min-width: 320px;
+  min-width: 100vw;
   min-height: 100vh;
   overflow-x: hidden;
 }
