--- a/client/src/components/ImagePlane.css
+++ b/client/src/components/ImagePlane.css
@@ -1,6 +1,6 @@
 .bg-container {
     position: absolute;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     background: #111;
     color: white;
