Added rides list

--- a/client/src/pages/Rides.css
+++ b/client/src/pages/Rides.css
@@ -100,4 +100,14 @@
     color: #c59b08;
 }
 
-/* Modified from: https://github.com/mukulkant/Star-rating-using-pure-css */
+.underline-button {
+    border: none;
+    background: none;
+    color: #00ccff;
+    text-decoration: underline;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 0;
+    margin: 0;
+}
